--- a/Dinamic V3/test-output/index.html
+++ b/Dinamic V3/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse-47308261\testng-customsuite.xml</span>
+                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse--186252697\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -110,6 +110,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="ordersEntry">ordersEntry</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="com.dinamic.v3.test.tescases.OrdersTestCase" class="method navigator-link" hash-for-method="withItemDiscount">withItemDiscount</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -151,6 +156,13 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
+                  <a name="withItemDiscount">
+                  </a> <!-- withItemDiscount -->
+                  <span class="method-name">withItemDiscount</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
                   <a name="withoutItemDiscountPrice">
                   </a> <!-- withoutItemDiscountPrice -->
                   <span class="method-name">withoutItemDiscountPrice</span>
@@ -161,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse-47308261\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse--186252697\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -210,24 +222,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'ordersEntry')
+data.setCell(0, 1, 'withItemDiscount')
 data.setCell(0, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(0, 3, 24010);
+data.setCell(0, 3, 67587);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'log')
+data.setCell(1, 1, 'ordersEntry')
 data.setCell(1, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(1, 3, 622);
+data.setCell(1, 3, 34957);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'withoutItemDiscountPrice')
+data.setCell(2, 1, 'log')
 data.setCell(2, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(2, 3, 271);
+data.setCell(2, 3, 996);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'withoutItemDiscountPrice')
+data.setCell(3, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
+data.setCell(3, 3, 496);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 24 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -267,19 +283,23 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">log</span>
-                <span class="method-start">8607 ms</span>
+                <span class="method-start">15675 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ordersEntry</span>
-                <span class="method-start">9247 ms</span>
+                <span class="method-start">16709 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">withoutItemDiscountPrice</span>
-                <span class="method-start">33261 ms</span>
+                <span class="method-start">51670 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">withItemDiscount</span>
+                <span class="method-start">52169 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">33537 ms</span>
+                <span class="method-start">119764 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
