--- a/Dinamic V3/test-output/emailable-report.html
+++ b/Dinamic V3/test-output/emailable-report.html
@@ -9,12 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">34,248</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">120,977</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.dinamic.v3.test.tescases.OrdersTestCase</td><td><a href="#m0">log</a></td><td rowspan="1">1670238076996</td><td rowspan="1">622</td></tr><tr class="passedeven"><td><a href="#m1">ordersEntry</a></td><td rowspan="1">1670238077636</td><td rowspan="1">24010</td></tr><tr class="passedeven"><td><a href="#m2">withoutItemDiscountPrice</a></td><td rowspan="1">1670238101650</td><td rowspan="1">271</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.dinamic.v3.test.tescases.OrdersTestCase</td><td><a href="#m0">log</a></td><td rowspan="1">1670327636619</td><td rowspan="1">996</td></tr><tr class="passedeven"><td><a href="#m1">ordersEntry</a></td><td rowspan="1">1670327637653</td><td rowspan="1">34957</td></tr><tr class="passedeven"><td><a href="#m2">withItemDiscount</a></td><td rowspan="1">1670327673113</td><td rowspan="1">67587</td></tr><tr class="passedeven"><td><a href="#m3">withoutItemDiscountPrice</a></td><td rowspan="1">1670327672614</td><td rowspan="1">496</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">com.dinamic.v3.test.tescases.OrdersTestCase#log</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">com.dinamic.v3.test.tescases.OrdersTestCase#ordersEntry</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.dinamic.v3.test.tescases.OrdersTestCase#withoutItemDiscountPrice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.dinamic.v3.test.tescases.OrdersTestCase#withItemDiscount</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">com.dinamic.v3.test.tescases.OrdersTestCase#withoutItemDiscountPrice</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
