--- a/Dinamic V3/test-output/index.html
+++ b/Dinamic V3/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse--186252697\testng-customsuite.xml</span>
+                    <span>C:\Users\white\AppData\Local\Temp\testng-eclipse--787824899\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -173,7 +173,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse--186252697\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\white\AppData\Local\Temp\testng-eclipse--787824899\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -224,26 +224,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'withItemDiscount')
+data.setCell(0, 1, 'ordersEntry')
 data.setCell(0, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(0, 3, 67587);
+data.setCell(0, 3, 13474);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'ordersEntry')
+data.setCell(1, 1, 'log')
 data.setCell(1, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(1, 3, 34957);
+data.setCell(1, 3, 305);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'log')
+data.setCell(2, 1, 'withoutItemDiscountPrice')
 data.setCell(2, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(2, 3, 996);
+data.setCell(2, 3, 94);
 data.setCell(3, 0, 3)
-data.setCell(3, 1, 'withoutItemDiscountPrice')
+data.setCell(3, 1, 'withItemDiscount')
 data.setCell(3, 2, 'com.dinamic.v3.test.tescases.OrdersTestCase')
-data.setCell(3, 3, 496);
+data.setCell(3, 3, 1);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 13 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -283,23 +283,23 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">log</span>
-                <span class="method-start">15675 ms</span>
+                <span class="method-start">5578 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">ordersEntry</span>
-                <span class="method-start">16709 ms</span>
+                <span class="method-start">5894 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">withoutItemDiscountPrice</span>
-                <span class="method-start">51670 ms</span>
+                <span class="method-start">19369 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">withItemDiscount</span>
-                <span class="method-start">52169 ms</span>
+                <span class="method-start">19464 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">close</span>
-                <span class="method-start">119764 ms</span>
+                <span class="method-start">19467 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
