--- a/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
+++ b/Dinamic V3/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="99b8e7">  <td>22/12/07 16:16:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">&gt;&gt;browserConfiguration</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/12/07 16:16:46</td>   <td>19062</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">&lt;&lt;close</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/12/07 16:16:31</td>   <td>4180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">log</td> 
-  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/12/07 16:16:44</td>   <td>16594</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.logout()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">logout</td> 
-  <td>main@1664576493</td>   <td></td> </tr>
-<tr bgcolor="99b8e7">  <td>22/12/07 16:16:32</td>   <td>4510</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@1b2abca6]">ordersEntry</td> 
-  <td>main@1664576493</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/08 16:35:13</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;OrdersTestCase.browserConfiguration()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">&gt;&gt;browserConfiguration</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/08 16:36:14</td>   <td>61343</td> <td>&nbsp;</td><td title="&lt;&lt;OrdersTestCase.close()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">&lt;&lt;close</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/08 16:35:17</td>   <td>4454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.log()[pri:0, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">log</td> 
+  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/08 16:35:18</td>   <td>4847</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.ordersEntry()[pri:1, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">ordersEntry</td> 
+  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/08 16:35:51</td>   <td>38817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withItemDiscount()[pri:3, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">withItemDiscount</td> 
+  <td>main@1908043086</td>   <td></td> </tr>
+<tr bgcolor="889b97">  <td>22/12/08 16:35:33</td>   <td>20607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrdersTestCase.withoutItemDiscountPrice()[pri:2, instance:com.dinamic.v3.test.tescases.OrdersTestCase@209da20d]">withoutItemDiscountPrice</td> 
+  <td>main@1908043086</td>   <td></td> </tr>
 </table>
