--- a/Dinamic V3/test-output/old/Default suite/methods-not-run.html
+++ b/Dinamic V3/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,3 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.withItemDiscount</td></tr>
-<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.withoutItemDiscountPrice</td></tr>
+<tr><td>com.dinamic.v3.test.tescases.OrdersTestCase.logout</td></tr>
 </table>
